# rma2shmem

./: .gitignore  INSTALL.md  LICENSE  Makefile.am  README.md  VERSION  configure.ac
src/: init.c  likely.h  rma.c  rma2shmem.h  rma2shmem_impl.h  utils.c  win.c
test/: Makefile.mk  README.md  test_assert.c  test_contig.c  test_rma.c  test_rma2.c
test/sandbox/: datatypes.c
